Add visits into stats page and API
